# reading-the-reader-monorepo

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  architecture_propoal.md  data_export.md  data_export_optimization.md  external_connection_execution_plan.md  external_connection_gaps.md  file_export.md  intervention_differences.md  plan.md
.claude/: settings.local.json
.codex/: config.toml  gsd-file-manifest.json
.codex/agents/: gsd-debugger.md  gsd-debugger.toml  gsd-executor.md  gsd-executor.toml  gsd-phase-researcher.md  gsd-phase-researcher.toml  gsd-plan-checker.md  gsd-plan-checker.toml  gsd-planner.md  gsd-planner.toml  gsd-project-researcher.md  gsd-project-researcher.toml  gsd-research-synthesizer.md  gsd-research-synthesizer.toml  gsd-roadmapper.md  gsd-roadmapper.toml  gsd-verifier.md  (+3 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
Backend/: .gitignore  LICENSE  README.md  reading-the-reader-backend.sln
Decision-Maker/: .env.example  README.md  pyproject.toml
DocsSite/: README.md  next.config.mjs  package.json  tsconfig.json
Eye-Movement-Analyzer/: .env.example  README.md  pyproject.toml
Eye-Movement-Analyzer/scripts/: startService.ps1
Eye-Movement-Analyzer/src/eye_movement_analyzer/: __init__.py  __main__.py  client.py  config.py  mock_analyzer.py
Eye-Movement-Analyzer/tests/: test_mock_analyzer.py
Frontend/: AGENTS.md  LICENSE  README.md  package.json
docs/: README.md
scripts/: README.md  start-dev.ps1  start-dev.sh  start-production.ps1  start-production.sh
(+810 files in other folders)
